--- a/app/javascript/packs/stylesheets/palette.scss
+++ b/app/javascript/packs/stylesheets/palette.scss
@@ -1,5 +1,6 @@
 $dark-gray: #212529;
-$gray: #495057;
+$gray: rgba(73, 80, 87, 1);
+$faded-gray: rgba(73, 80, 87, .6);
 $light-gray: #f8f9fa;
 
 $light-blue: #9ec5fe;
