--- a/app/javascript/packs/stylesheets/application.scss
+++ b/app/javascript/packs/stylesheets/application.scss
@@ -3,11 +3,13 @@
 @import './shared/_navbar.scss';
 @import './shared/_new_button_card.scss';
 @import './shared/_trix_editor_custom.scss';
+@import './characters/_fact_list.scss';
 @import './characters/_image_list.scss';
 @import './characters/_item_list.scss';
 @import './characters/_trait_list.scss';
 @import './characters/show.scss';
 @import './images/edit.scss';
+@import './locations/_fact_list.scss';
 @import './universes/_card_list.scss';
 @import './universes/_image_list.scss';
 @import './universes/universe_footer.scss';
