--- a/app/javascript/packs/stylesheets/characters/_item_list.scss
+++ b/app/javascript/packs/stylesheets/characters/_item_list.scss
@@ -1,6 +1,6 @@
 @import '../palette.scss';
 
-.character-item-component {
+.character-item {
   .badge {
     align-items: center;
     border: 1px solid $gray;
