--- a/app/views/characters/_image_list.html.erb
+++ b/app/views/characters/_image_list.html.erb
@@ -1,4 +1,4 @@
-<div class="character-image-component container" data-controller="character-image">
+<div class="character-image container">
   <div class="row">
     <% @images.reverse.each do | image | %>
       <div class="col-md-2">
