--- a/app/views/characters/_item_list.html.erb
+++ b/app/views/characters/_item_list.html.erb
@@ -1,4 +1,4 @@
-<div class="character-item-component container" data-controller="character-item">
+<div class="character-item container">
   <div class="row">
     <% if @character.items.empty? %>
       <div class="col-md-10 mx-auto">
