--- a/app/views/characters/_trait_list.html.erb
+++ b/app/views/characters/_trait_list.html.erb
@@ -1,4 +1,4 @@
-<div class="character-trait-component container" data-controller="character-trait">
+<div class="character-trait container">
   <div class="row">
       <% if @character.traits.empty? %>
       <div class="col-md-10 mx-auto">
