--- a/app/javascript/packs/stylesheets/characters/_trait_list.scss
+++ b/app/javascript/packs/stylesheets/characters/_trait_list.scss
@@ -1,6 +1,6 @@
 @import '../palette.scss';
 
-.character-trait-component {
+.character-trait {
   .badge {
     align-items: center;
     border: 1px solid $gray;
