--- a/app/javascript/packs/stylesheets/shared/_card.scss
+++ b/app/javascript/packs/stylesheets/shared/_card.scss
@@ -13,7 +13,9 @@
     object-fit: cover;
     object-position: 0 10%;
     width: 100%;
-    max-height: 150px;
+    max-height: 180px;
+    margin: 0;
+    padding: 0;
   }
 
   .card-title {
