--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="prefetch" href="<%= asset_pack_path 'media/packs/fonts/Montserrat-BoldItalic.ttf' %>" />
   </head>
 
   <body class="bb-dark">
