--- a/app/views/universes/_card_list.html.erb
+++ b/app/views/universes/_card_list.html.erb
@@ -1,9 +1,8 @@
 <div class="card-list cards">
   <h2><%= name %></h2>
-
   <div class="row">
-    <div class="col-md-10">
-      <div class="row">
+    <div class="col-md-12">
+      <div class="row card-row">
         <% if collection.empty? %>
           <div class="col-md-10 mx-auto">
             <ul class="list-group list-group-flush rounded">
@@ -12,15 +11,15 @@
           </div>
         <% else %>
           <% collection.sort_by{ |e| e.name.downcase }.each do | item | %>
-            <div class="col-md-3">
+            <div class="col-md-2">
               <%= link_to render(:partial => "shared/card", locals: { name: item.name, avatar: get_avatar_image(item.try(:images)) }), collection_url.call(item) %>
             </div>
           <% end %>
         <% end %>
+        <div class="col-md-2">
+          <%= link_to render(partial: "shared/new_button_card"), new_url %>
+        </div>
       </div>
-    </div>
-    <div class="col-md-2">
-      <%= link_to render(partial: "shared/new_button_card"), new_url %>
     </div>
   </div>
 </div>
