--- a/app/javascript/packs/stylesheets/application.scss
+++ b/app/javascript/packs/stylesheets/application.scss
@@ -6,6 +6,7 @@
 @import './characters/_fact_list.scss';
 @import './characters/_image_list.scss';
 @import './characters/_item_list.scss';
+@import './characters/_relationship_table.scss';
 @import './characters/_trait_list.scss';
 @import './characters/show.scss';
 @import './images/edit.scss';
