--- a/app/views/characters/_item_list.html.erb
+++ b/app/views/characters/_item_list.html.erb
@@ -1,17 +1,17 @@
 <div class="character-item container">
   <div class="row">
-    <% if @character.items.empty? %>
+    <% if @character.character_items.empty? %>
       <div class="col-md-10 mx-auto">
         <ul class="list-group list-group-flush rounded">
           <li class="list-group-item list-group-item-danger">This character has no items.</li>
         </ul>
       </div>
     <% else %>
-      <% @character.items.sort_by{ |e| e.name.downcase }.each do | item | %>
+      <% @character.character_items.sort_by{ |e| e.item.name.downcase }.each do | character_item | %>
         <div class="col-md-auto">
           <span class="badge bg-dark">
-            <span><%= item.name %></span>
-            <%= link_to character_item_url(item), method: "delete" do %>
+            <span><%= character_item.item.name %></span>
+            <%= link_to character_item_url(character_item), method: "delete" do %>
               <button type="button" class="btn-close btn-close-white" aria-label="Close"></button>
             <% end %>
           </span>
