--- a/app/views/characters/_trait_list.html.erb
+++ b/app/views/characters/_trait_list.html.erb
@@ -1,17 +1,17 @@
 <div class="character-trait container">
   <div class="row">
-      <% if @character.traits.empty? %>
+      <% if @character.character_traits.empty? %>
       <div class="col-md-10 mx-auto">
         <ul class="list-group list-group-flush rounded">
           <li class="list-group-item list-group-item-danger">This character has no traits.</li>
         </ul>
       </div>
     <% else %>
-      <% @character.traits.sort_by{ |e| e.name.downcase }.each do | trait | %>
+      <% @character.character_traits.sort_by{ |e| e.trait.name.downcase }.each do | character_trait | %>
         <div class="col-md-auto">
           <span class="badge bg-dark">
-            <span><%= trait.name %></span>
-            <%= link_to character_trait_url(trait), method: "delete" do %>
+            <span><%= character_trait.trait.name %></span>
+            <%= link_to character_trait_url(character_trait), method: "delete" do %>
               <button type="button" class="btn-close btn-close-white" aria-label="Close"></button>
             <% end %>
           </span>
