--- a/app/javascript/packs/stylesheets/characters/show.scss
+++ b/app/javascript/packs/stylesheets/characters/show.scss
@@ -11,6 +11,14 @@
     margin-bottom: 1em;
   }
 
+  .image-caption {
+    display: block;
+    font-style: italic;
+    font-size: .9em;
+    text-align: center;
+    width: 100%;
+  }
+
   .pagination {
     justify-content: center;
 
