--- a/app/javascript/packs/stylesheets/images/edit.scss
+++ b/app/javascript/packs/stylesheets/images/edit.scss
@@ -1,7 +1,5 @@
 .image-edit {
   .character-select {
-    text-align: center;
-
     h3 {
       text-align: left;
     }
@@ -18,6 +16,17 @@
 
     form {
       margin-bottom: 1em;
+      overflow: hidden;
+
+      input[type=submit] {
+        float: right;
+        clear: both;
+      }
+    }
+
+    .delete-button {
+      float: right;
+      clear: both;
     }
   }
 }
