--- a/app/views/characters/_image_list.html.erb
+++ b/app/views/characters/_image_list.html.erb
@@ -5,6 +5,7 @@
         <%= link_to edit_universe_image_url(@character.universe, image) do %>
           <%= image_tag(image.image_file.variant(resize_to_limit: [250, nil]), class: "img-thumbnail") %>
         <% end %>
+        <span class="image-caption"><%= image.caption %></span>
       </div>
     <% end %>
     <%= will_paginate @images %>
