--- a/app/views/universes/index.html.erb
+++ b/app/views/universes/index.html.erb
@@ -2,6 +2,7 @@
   <%= render partial: "universes/card_list", locals: {
     collection: @universes,
     collection_url: ->(x) { universe_url(x) },
+    image_helper: ->(x) { get_universe_avatar_image(x) },
     new_url: new_universe_url(@universe),
     name: "Universes"
   } %>
