--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -8,6 +8,7 @@
   <%= render partial: "universes/card_list", locals: {
     collection: @universe.characters,
     collection_url: ->(x) { character_url(x) },
+    image_helper: ->(x) { get_character_avatar_image(x) },
     new_url: new_universe_character_url(@universe),
     name: "Characters"
   } %>
@@ -15,6 +16,7 @@
   <%= render partial: "universes/card_list", locals: {
     collection: @universe.locations,
     collection_url: ->(x) { location_url(x) },
+    image_helper: ->(x) { get_character_avatar_image(x) },
     new_url: new_universe_location_url(@universe),
     name: "Locations"
   } %>
