--- a/app/views/characters/_image_list.html.erb
+++ b/app/views/characters/_image_list.html.erb
@@ -1,6 +1,6 @@
 <div class="character-image container">
   <div class="row">
-    <% @images.sort_by {|i| i.created_at }.reverse.each do | image | %>
+    <% @images.each do | image | %>
       <div class="col-md-2">
         <%= link_to edit_universe_image_url(@character.universe, image) do %>
           <%= image_tag(image.image_file.variant(resize_to_limit: [250, nil]), class: "img-thumbnail") %>
