--- a/app/views/universes/_image_list.html.erb
+++ b/app/views/universes/_image_list.html.erb
@@ -23,7 +23,7 @@
             </ul>
           </div>
         <% else %>
-          <% images.sort_by {|i| i.created_at }.reverse.each do | image | %>
+          <% images.each do | image | %>
             <div class="col-md-2 image">
               <%= link_to edit_universe_image_url(universe, image) do %>
                 <%= image_tag(image.image_file.variant(resize_to_limit: [250, nil]), class: "img-thumbnail") %>
