--- a/app/views/characters/_image_list.html.erb
+++ b/app/views/characters/_image_list.html.erb
@@ -3,7 +3,7 @@
     <% @images.each do | image | %>
       <div class="col-md-2">
         <%= link_to edit_universe_image_url(@character.universe, image) do %>
-          <%= image_tag(image.image_file.variant(resize_to_limit: [250, nil]), class: "img-thumbnail") %>
+          <%= generate_image_tag(image, [250, nil]) %>
         <% end %>
         <span class="image-caption"><%= image.caption %></span>
       </div>
