--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -5,7 +5,7 @@
     <h2>Image Tags</h2>
     <div class="col-md-8">
       <%= link_to rails_blob_path(@image.image_file, disposition: "attachment") do %>
-        <%= image_tag(@image.image_file.variant(resize_to_limit: [1000, nil]), class: "img-thumbnail") %>
+        <%= generate_image_tag(@image, [1000, nil]) %>
       <% end %>
     </div>
     <div class="col-md-4 character-select">
