--- a/app/views/universes/_image_list.html.erb
+++ b/app/views/universes/_image_list.html.erb
@@ -26,7 +26,7 @@
           <% images.each do | image | %>
             <div class="col-md-2 image">
               <%= link_to edit_universe_image_url(universe, image) do %>
-                <%= image_tag(image.image_file.variant(resize_to_limit: [250, nil]), class: "img-thumbnail") %>
+                <%= generate_image_tag(image, [250, nil]) %>
               <% end %>
             </div>
           <% end %>
