--- a/app/javascript/packs/stylesheets/characters/_relationship_table.scss
+++ b/app/javascript/packs/stylesheets/characters/_relationship_table.scss
@@ -1,4 +1,5 @@
-.character-relationsips {
+.character-relationsips-table {
+
   table {
     text-align: center;
     vertical-align: middle;
@@ -7,4 +8,5 @@
       margin: 0 !important;
     }
   }
+
 }
