--- a/app/javascript/packs/stylesheets/images/edit.scss
+++ b/app/javascript/packs/stylesheets/images/edit.scss
@@ -1,4 +1,5 @@
-.image-edit {
+.images-edit-view {
+
   .character-select {
     h3 {
       text-align: left;
@@ -29,4 +30,5 @@
       clear: both;
     }
   }
+
 }
