--- a/app/javascript/packs/stylesheets/universes/show.scss
+++ b/app/javascript/packs/stylesheets/universes/show.scss
@@ -1,4 +1,5 @@
-.universe-show {
+.universes-show-view {
+
   header, img, .cards {
     margin-bottom: 1em;
   }
@@ -22,4 +23,5 @@
       margin: 0 .5em;
     }
   }
+
 }
