--- a/app/views/characters/_trait_list.html.erb
+++ b/app/views/characters/_trait_list.html.erb
@@ -1,6 +1,8 @@
-<div class="character-trait container">
+<section class="character-trait-list">
+
+  <h2>Traits</h2>
   <div class="row">
-      <% if @character.character_traits.empty? %>
+    <% if @character.character_traits.empty? %>
       <div class="col-md-10 mx-auto">
         <ul class="list-group list-group-flush rounded">
           <li class="list-group-item list-group-item-danger">This character has no traits.</li>
@@ -11,28 +13,33 @@
         <div class="col-md-auto">
           <span class="badge bg-dark">
             <span><%= character_trait.trait.name %></span>
-            <%= link_to character_trait_url(character_trait), method: "delete" do %>
-              <button type="button" class="btn-close btn-close-white" aria-label="Close"></button>
+            <% if view == 'edit' %>
+              <%= link_to character_trait_url(character_trait), method: "delete" do %>
+                <button type="button" class="btn-close btn-close-white" aria-label="Close"></button>
+              <% end %>
             <% end %>
           </span>
         </div>
       <% end %>
     <% end %>
   </div>
-  <hr />
-  <div class="row">
-    <div class="col-md-4 mx-auto">
-      <%= form_with model: CharacterTrait.new(), url: character_character_traits_url(@character), method: "post" do | form | %>
-        <div class="form-group">
-          <%= form.label "New Trait", class: "form-label" %>
-          <div class="input-group">
-              <%= form.text_field :trait_name, class: "form-control" %>
-            <div class="input-group-append">
-              <%= form.submit "Add", class: "btn btn-primary" %>
+  <% if view == 'edit' %>
+    <hr />
+    <div class="row">
+      <div class="col-md-4 mx-auto">
+        <%= form_with model: CharacterTrait.new(), url: character_character_traits_url(@character), method: "post" do | form | %>
+          <div class="form-group">
+            <%= form.label "New Trait", class: "form-label" %>
+            <div class="input-group">
+                <%= form.text_field :trait_name, class: "form-control" %>
+              <div class="input-group-append">
+                <%= form.submit "Add", class: "btn btn-primary" %>
+              </div>
             </div>
           </div>
-        </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
-  </div>
-</div>
+  <% end %>
+
+</section>
