--- a/app/views/shared/_app_footer.html.erb
+++ b/app/views/shared/_app_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="universe-footer">
+<footer class="app-footer">
   <div class="row">
     <div class="col-md-8 mx-auto">
       Owner: <%= owner.display_name %>
