--- a/app/javascript/packs/stylesheets/characters/_image_list.scss
+++ b/app/javascript/packs/stylesheets/characters/_image_list.scss
@@ -1,4 +1,5 @@
-.character-image {
+.character-image-list {
+
   img {
     margin-bottom: 1em;
   }
@@ -10,4 +11,5 @@
       margin: 0 .5em;
     }
   }
+
 }
