--- a/app/javascript/packs/stylesheets/characters/_item_list.scss
+++ b/app/javascript/packs/stylesheets/characters/_item_list.scss
@@ -1,6 +1,7 @@
 @import '../palette.scss';
 
-.character-item {
+.character-item-list {
+
   .badge {
     align-items: center;
     border: 1px solid $gray;
@@ -11,4 +12,5 @@
       margin-left: 1em;
     }
   }
+
 }
