--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -1,9 +1,10 @@
-<div class="characters-new">
+<section class="characters-new-view">
+
   <div class="row">
     <div class="col-md-10 mx-auto">
       <h1>New Character</h1>
 
-      <%= form_with model: @new_character, url: universe_characters_url(universe_id: @new_character.universe_id), html: { class: "bbform border border-dark border-2 rounded trix-editor-custom" } do |form| %>
+      <%= form_with model: @new_character, url: universe_characters_url(universe_id: @new_character.universe_id), html: { class: "border border-dark border-2 rounded trix-editor-custom" } do |form| %>
         <div class="mb-3">
           <%= form.label :name, class: "form-label" %>
           <%= form.text_field :name, class: "form-control" %>
@@ -17,4 +18,10 @@
       <% end %>
     </div>
   </div>
-</div>
+
+  <%= render partial: "shared/app_footer", locals: {
+    owner: @new_character.universe.owner,
+    collaborators: @new_character.universe.collaborators
+  } %>
+
+</section>
