--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,20 +1,29 @@
-<div class="row">
-  <div class="col-md-6 mx-auto">
-    <h2>Edit Location</h2>
+<section class="locations-edit-view">
 
-    <%= form_with model: @location, url: location_url(@location), method: "patch", class: "bbform border border-dark border-2 rounded" do |form| %>
-      <div class="mb-3">
-        <%= form.label :name, class: "form-label" %>
-        <%= form.text_field :name, class: "form-control" %>
-      </div>
-      <div class="mb-3">
-        <%= form.label :content, class: "form-label" %>
-        <%= form.rich_text_area :content %>
-      </div>
-      <%= form.submit "Save", class: "btn btn-primary" %>
-      <%= link_to "Cancel", location_url(@location), class: "btn btn-primary" %>
-      <%= link_to "Delete", location_url(@location), method: "delete", :data => {:confirm => "Are you sure?"}, class: "btn btn-danger" %>
-    <% end %>
+  <div class="row">
+    <div class="col-md-10 mx-auto">
+      <h2>Edit Location</h2>
 
+      <%= form_with model: @location, url: location_url(@location), method: "patch", class: "border border-dark border-2 rounded trix-editor-custom" do |form| %>
+        <div class="mb-3">
+          <%= form.label :name, class: "form-label" %>
+          <%= form.text_field :name, class: "form-control" %>
+        </div>
+        <div class="mb-3">
+          <%= form.label :content, class: "form-label" %>
+          <%= form.rich_text_area :content %>
+        </div>
+        <%= form.submit "Save", class: "btn btn-primary" %>
+        <%= link_to "Cancel", location_url(@location), class: "btn btn-primary" %>
+        <%= link_to "Delete", location_url(@location), method: "delete", :data => {:confirm => "Are you sure?"}, class: "btn btn-danger" %>
+      <% end %>
+
+    </div>
   </div>
-</div>
+
+  <%= render partial: "shared/app_footer", locals: {
+    owner: @location.universe.owner,
+    collaborators: @location.universe.collaborators
+  } %>
+
+</section>
