--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,11 +1,13 @@
-<h1><%= @location.name %></h1>
-<p><%= @location.content %></p>
+<section class="locations-show-view">
 
-<% render partial: "shared/capture_navbar" %>
+  <h1><%= @location.name %></h1>
+  <p><%= @location.content %></p>
 
-<section class="location-facts">
-  <h2>Facts</h2>
-  <%= render partial: "locations/fact_list", locals: {
-    location: @location,
+  <% render partial: "shared/capture_navbar" %>
+
+  <%= render partial: "shared/app_footer", locals: {
+    owner: @location.universe.owner,
+    collaborators: @location.universe.collaborators
   } %>
+
 </section>
