--- a/app/views/universes/_card_list.html.erb
+++ b/app/views/universes/_card_list.html.erb
@@ -1,4 +1,4 @@
-<div class="card-list cards">
+<section class="card-list cards">
   <h2><%= name %></h2>
   <div class="row">
     <div class="col-md-12">
@@ -22,4 +22,4 @@
       </div>
     </div>
   </div>
-</div>
+</section>
