--- a/app/views/universes/_image_list.html.erb
+++ b/app/views/universes/_image_list.html.erb
@@ -1,4 +1,4 @@
-<div class="image-list">
+<section class="image-list">
   <h2>Images</h2>
   <div class="row">
     <div class="col-md-4 mx-auto">
@@ -35,4 +35,4 @@
       </div>
     </div>
   </div>
-</div>
+</section>
