--- a/app/views/universes/new.html.erb
+++ b/app/views/universes/new.html.erb
@@ -1,15 +1,17 @@
-<div class="row">
-  <div class="col-md-6 mx-auto">
-    <h2>New Universe</h2>
+<section class="universes-new-view">
+  <div class="row">
+    <div class="col-md-6 mx-auto">
+      <h2>New Universe</h2>
 
-    <%= form_with model: @new_universe, url: universes_url(@new_universe), method: "post", class: "bbform border border-dark border-2 rounded" do |form| %>
-      <div class="mb-3">
-        <%= form.label :name, class: "form-label" %>
-        <%= form.text_field :name, class: "form-control" %>
-      </div>
-      <%= form.submit "Save", class: "btn btn-primary" %>
-      <%= link_to "Cancel", universes_url(), class: "btn btn-primary" %>
-    <% end %>
+      <%= form_with model: @new_universe, url: universes_url(@new_universe), method: "post", class: "border border-dark border-2 rounded" do |form| %>
+        <div class="mb-3">
+          <%= form.label :name, class: "form-label" %>
+          <%= form.text_field :name, class: "form-control" %>
+        </div>
+        <%= form.submit "Save", class: "btn btn-primary" %>
+        <%= link_to "Cancel", universes_url(), class: "btn btn-primary" %>
+      <% end %>
 
+    </div>
   </div>
-</div>
+</section>
