--- a/app/javascript/packs/stylesheets/application.scss
+++ b/app/javascript/packs/stylesheets/application.scss
@@ -22,6 +22,7 @@ html, body {
   color: $light-gray;
   font-family: 'Montserrat', sans-serif;
   margin: 0;
+  min-width: 360px;
   padding: 0;
 }
 
