User info instead of danger class.

--- a/app/views/characters/_relationship_table.html.erb
+++ b/app/views/characters/_relationship_table.html.erb
@@ -16,7 +16,7 @@
         </thead>
         <% if @character.relationships.empty? %>
           <tbody>
-            <tr class="table-danger empty-row">
+            <tr class="table-info empty-row">
               <td colspan=4>This character has no relationships.</td>
             </tr>
         <% else %>
