--- a/app/views/shared/_flashbar.html.erb
+++ b/app/views/shared/_flashbar.html.erb
@@ -1,5 +1,5 @@
-<% flash.each do |key, value| %>
-  <div class="<%= flash_class(key) %>">
-    <%= value %>
+<% flash.each do |type, message| %>
+  <div class="flashbar <%= flash_class(type) %>">
+    <%= message %>
   </div>
 <% end %>
