--- a/app/views/universes/edit.html.erb
+++ b/app/views/universes/edit.html.erb
@@ -14,12 +14,10 @@
     </div>
     <div class="col-md-4 collaborator-select">
       <h3>You are collaborating with...</h3>
-      <% if @universe.collaborators.empty? %>
-        <ul class="list-group list-group-flush rounded">
+      <ul class="list-group list-group-flush rounded collaborators">
+        <% if @universe.collaborators.empty? %>
           <li class="list-group-item list-group-item-danger">There are no collaborators in this universe.</li>
-        </ul>
-      <% else %>
-        <ul class="list-group list-group-flush rounded">
+        <% else %>
           <% @universe.collaborations.each do | collaboration | %>
             <li class="list-group-item list-group-item-info">
               <span><%= collaboration.user.display_name %></span>
@@ -28,8 +26,8 @@
               <% end %>
             </li>
           <% end %>
-        </ul>
-      <% end %>
+        <% end %>
+      </ul>
 
       <h3>You could add...</h3>
       <%= form_with model: Collaboration.new(), url: universe_collaborations_url(@universe), method: "post" do |form| %>
